# quick-oxibooks

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
examples/: attachment_test.rs  batch_query.rs  invoice_query.rs  report_query.rs
intuit-oauth/: Cargo.toml  LICENSE  README.md
intuit-oauth/src/: auth.rs  lib.rs
intuit-oauth/src/auth/: error.rs  mod.rs  token.rs
src/: auth.rs  batch.rs  client.rs  error.rs  functions.rs  lib.rs  limiter.rs  macros.rs  main.rs  objects.rs  quickbook.rs
src/client/: authorized.rs  context.rs  mod.rs  quickbooks.rs  refresh.rs  unauthorized.rs
src/functions/: attachment.rs  create.rs  delete.rs  mod.rs  pdf.rs  pdfable.rs  query.rs  read.rs  reports.rs  send.rs
src/reports/: mod.rs  param.rs
test/data/: batch_req.json  batch_resp.json
