[package]
name = "quick-oxibooks"
version = "0.1.0"
edition = "2021"
authors = ["@exotik850"]
license = "MIT"
description = "A Rust client library for QuickBooks Online API"
repository = "https://github.com/exotik850/quick-oxibooks"
keywords = ["quickbooks", "quickbooks-online", "api", "client", "rust"]
categories = ["api-clients", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quickbooks-types = { path = "quickbooks-types", features = [
  "builder",
] }
log = { version = "0.4.20", optional = true }
# quickbooks-types = { path = "quickbooks-types", version = "*", features = ["builder"] }log = { version = "0.4.20", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
ureq = { version = "3.0.12", features = ["json"] }

# Macros
paste = { package = "pastey", version = "*", optional = true }
urlencoding = "2.1.3"

[dev-dependencies]
env_logger = "0.11.6"

[features]
macros = ["dep:paste"]
attachments = []
pdf = []
polars = ["quickbooks-types/polars"]
logging = ["dep:log"]

[[example]]
name = "invoice_query"
path = "examples/invoice_query.rs"

[[example]]
name = "report_query"
path = "examples/report_query.rs"

[workspace]
members = ["quickbooks-types"]
