[package]
name = "intuit-oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = {version="4.4.1", features=["reqwest"]}
reqwest = {version = "0.11.18", features = ["json"]}
serde = { version = "1.0.164", features = ["derive"] }
url = "2.4.0"
tokio = "1.29.1"
open = "5.0.0"
thiserror = "1.0.44"